[project]
name = "cell_profile"
version = "0.1.0"
dependencies = [
	"numpy>=1.23,<1.24",
	"tqdm",
	"scikit-learn",
	"plotly>=5.16,<5.17",
	"umap-learn",
    "pacmap",

	# default dataframe library
	"pandas>=1.5.3,<1.6",
	"pandas-stubs",
	# required by pandas for database connection, and v2.0 removes ExecutionEngine.execute, which is required
	"connectorx",
	# required by pandas for excel file import
	"openpyxl",
	# required by pandas for parquet import/export
	"pyarrow",

	# fast pandas compatible dataframe library
	"polars",
	# required for polars database connection
	"sqlalchemy<2.0",
]
