[project]
name = "cell_profile"
version = "0.1.0"
dependencies = [
    "numpy>=2.2,<3",
	"tqdm",
	"scikit-learn",
	"plotly>=5.16,<6",
	"umap-learn",
    "pacmap",

	# default dataframe library
    "pandas>=2.2,<3",
	"pandas-stubs",
	# required by pandas for database connection, and v2.0 removes ExecutionEngine.execute, which is required
	"connectorx",
	# required by pandas for excel file import
	"openpyxl",
	# required by pandas for parquet import/export
	"pyarrow",

	# fast pandas compatible dataframe library
	"polars>=1.31.0",
	# required for polars database connection
	"sqlalchemy<2.0",
]
